--- a/src/views/home_with_ws.pug
+++ b/src/views/home_with_ws.pug
@@ -9,11 +9,12 @@ html(lang="en")
     body 
         header 
             h1 Noom
-            main
-                div#welcome
-                    form
-                        input(placeholders = "room name", type = "text" , required)
-                        button EnterRoom  
-
-        script(src="/socket.io/socket.io.js")
+            main 
+                form#nick
+                    input(type='text' , placeholder = 'choose a nickname', required)
+                    button Save
+                ul
+                form#message
+                    input(type='text' , placeholder = 'write a msg', required)
+                    button Send
         script(src="/public/js/app.js")
