--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,9 +11,17 @@ html(lang="en")
             h1 Noom
             main
                 div#welcome
-                    form
+                    form#loby
                         input(placeholders = "room name", type = "text" , required)
-                        button EnterRoom  
-
+                        button EnterRoom
+                div#room
+                    h3
+                    form#nick
+                        input(placeholders = "choose your nickname", type = "text" , required)
+                        button Save
+                    ul
+                    form#msg
+                        input(placeholders="message", required, type='text')
+                        button Send 
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
