--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,6 +14,8 @@ html(lang="en")
                     form#loby
                         input(placeholders = "room name", type = "text" , required)
                         button EnterRoom
+                    h4 Open Rooms:
+                    ul
                 div#room
                     h3
                     form#nick
