--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,20 +10,10 @@ html(lang="en")
         header 
             h1 Noom
             main
-                div#welcome
-                    form#loby
-                        input(placeholders = "room name", type = "text" , required)
-                        button EnterRoom
-                    h4 Open Rooms:
-                    ul
-                div#room
-                    h3
-                    form#nick
-                        input(placeholders = "choose your nickname", type = "text" , required)
-                        button Save
-                    ul
-                    form#msg
-                        input(placeholders="message", required, type='text')
-                        button Send 
+                div#myStream                 
+                    video#myFace(autoplay,playsinline , width = "400" , height = "400") <!--> playsinline = 모바일에서 필요한 property 전체화면이 안 되게 함<-->
+                    button#muteBtn Mute
+                    button#cameraBtn Turn Camera On
+                    select#cameras
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
